# sk-notes

./: CMakeLists.txt
src/: demo_basics.cpp  demo_lines.cpp  demo_picker.cpp  demo_sprites.cpp  demo_ui.cpp  m_eigen_interop.hpp  main.cpp
